--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
 
+
+<div class ="quiz-start-box">
     <header>
         <h1>Coding Quiz Challenge</h1>
         <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 10 seconds!</p>
+        <button>Start Quiz</button>
     </header>
+</div>
+
     
  <script src="./assets/script.js"></script>
 </body>
