--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
 
-<div class ="quiz-start-box">
-    <header>
+<div>
+    <header  class ="quiz-start-box">
         <h1>Coding Quiz Challenge</h1>
         <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 10 seconds!</p>
         <button>Start Quiz</button>
