added more css properties

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
     <body>
         <div class="main-outer-container"> 
-        
+            
             <header class ="top-header">
                 <button>View high scores</button>
                 <p>Time:0</p>
             </header>
 
-            <div>
+            <div class="inside-container">
                 <header  class ="quiz-start-box">
                     <h1>Coding Quiz Challenge</h1>
                     <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 10 seconds!</p>
