added buttons and h2 tag for questions/answers

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
             </div>
         </div>        
         
+        <!-- Main Quiz -->
+
+        <h2>Question Here</h2>
+          <ul>
+            <button>Answer 1</button>
+            <button>Answer 2</button>
+            <button>Answer 3</button>
+            <button>Answer 4</button>
+          </ul>  
+
     <script src="./assets/script.js"></script>
     </body>
 </html>
