added id/class to buttons in html and elements to css

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         
         <!-- Main Quiz -->
 
-        <h2>Question Here</h2>
+        <h2 class="question">Question Here</h2>
           <ul>
-            <button>Answer 1</button>
-            <button>Answer 2</button>
-            <button>Answer 3</button>
-            <button>Answer 4</button>
+            <button id='btn1' class="btn">Answer 1</button>
+            <button id='btn2' class="btn">Answer 2</button>
+            <button id='btn3' class="btn">Answer 3</button>
+            <button id='btn4' class="btn">Answer 4</button>
           </ul>  
 
     <script src="./assets/script.js"></script>
