added class and id to Start Quiz button and added a background color to the button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <header  class ="quiz-start-box">
                     <h1>Coding Quiz Challenge</h1>
                     <p>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 10 seconds!</p>
-                    <button id="startButton">Start Quiz</button>
+                    <button id="startButton" class="startButton" type="submit">Start Quiz</button>
                 </header>
             </div>
         </div>        
