--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>        
         
         <!-- Main Quiz -->
-
+    <div id="question-container" class="hide">  
         <h2 class="question">Question Here</h2>
           <ul>
             <button id='btn1' class="btn">Answer 1</button>
@@ -32,7 +32,7 @@
             <button id='btn3' class="btn">Answer 3</button>
             <button id='btn4' class="btn">Answer 4</button>
           </ul>  
-
+    </div>
     <script src="./assets/script.js"></script>
     </body>
 </html>
